tests/errors/explicit_type_params_duplicate.dang
# Duplicate type parameter names are an error.

pub dup[a, a](x: a): a { x }
